cells_overview.txt
python :   File "<string>", line 1
At line:1 char:32
+ ... NG="utf-8"; python -c "import json; nb=json.load(open('notebooks_unsw ...
+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 1:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    import json; nb=json.load(open('notebooks_unsw/preprocess.ipynb','r',encoding='utf-8')); print('Total cells:', 
len(nb['cells'])); [print(f'--- CELL {i} ({c[" cell_type\]})
                                                                                                                       
                                         ^
SyntaxError: unterminated string literal (detected at line 1)
